truong update cookies

--- a/src/content.html
+++ b/src/content.html
@@ -56,142 +56,129 @@
        </nav>
    </header>
 
-<div class="container" >
- <div class="row">
-  <div class="col-sm-9 col-lg-9">
-    <section id="title">
-                   <h1 class="display-2 text-decoration-underline"><b>Content Template</b></h1>
-                   <div class="text-muted mb-3">By <a href="#">Callie Bryan Truong</a>.<span class="text-muted me-3"> Last Updated: January 1, 2023</span></div>
-                   <div class="text-muted">Site visits: <span id="readingTime"></span></div>
-                   <br>
-    </section>
-      <h2 id="scrollspyHeading1">Section 1</h2>
-                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                       nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                       risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                       luctus est.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                       nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                       risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                       luctus est.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                       nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                       risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                       luctus est.</p>
+    <div class="container" >
+        <div class="row">
+            <div class="col-sm-9 col-lg-9">
+                <section id="title">
+                    <h1 class="display-2 text-decoration-underline"><b>Content Template</b></h1>
+                    <div class="text-muted mb-3">By <a href="#">Callie Bryan Truong</a>.<span class="text-muted me-3"> Last Updated: January 1, 2023</span></div>
+                    <div class="text-muted">Site visits: <span id="readingTime"></span></div>
+                    <br>
+                </section>
+                <h2 id="scrollspyHeading1">Section 1</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
+                    nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
+                    risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
+                    luctus est.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
+                    nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
+                    risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
+                    luctus est.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
+                    nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
+                    risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
+                    luctus est.</p>
 
-      <h2 id ="scrollspyHeading2">Section 2</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                       nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                       risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                       luctus est.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                       nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                       risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                       luctus est.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                       nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                       risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                       luctus est.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                       nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                       risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                       luctus est.</p>
-      <h2 id="scrollspyHeading3">Section 3</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                       nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                       risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                       luctus est.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                       nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                       risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                       luctus est.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                       nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                       risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                       luctus est.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                       nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                       risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                       luctus est.</p>
-  </div>
-<style>
- div .container {
-    height:100vh;
-    width:100vw;
-    float:none;
-    margin:0 auto;
-}
-     .dropdown-item a {
-        text-decoration: none;
-        color: black;
-    }
-    .nav-item a:hover {
-        width: 100%;
-        color: white;
-        background-color: blue;
-    }
-</style>
-     <div class=" d-sm-none d-md-block collapse w-25">
-     <nav id="navbar-example2" class="flex-column navbar navbar-light">
-  <a class="navbar-brand text-muted" href="#">On this page:</a>
-  <ul class="nav nav-pills flex-column  ">
-    <li class="nav-item">
-      <a class="nav-link" href="#scrollspyHeading1">First</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#scrollspyHeading2">Second</a>
-    </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#scrollspyHeading3">Third</a></li>
-        <li><a class="dropdown-item" href="#scrollspyHeading4">Fourth</a></li>
-        <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="#scrollspyHeading5">Fifth</a></li>
-      </ul>
-    </li>
-  </ul>
-</nav>
-</div>
-</div>
+                <h2 id ="scrollspyHeading2">Section 2</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
+                    nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
+                    risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
+                    luctus est.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
+                    nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
+                    risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
+                    luctus est.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
+                    nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
+                    risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
+                    luctus est.</p>
 
- <footer>
-               <div class="row py-5">
-                   <div class="col">
-                       <h4>About Us</h4>
-                       <ul class="nav flex-column">
-                           <li class="nav-item">
-                               <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="story.html">Our Story</a></li>
-                               <a aria-current="page" class="nav-link mb-2 p-0 text-muted active" href="privacy.html">Privacy Policy</a>
-                           </li>
-                       </ul>
-                   </div>
+                <h2 id="scrollspyHeading3">Section 3</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
+                    nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
+                    risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
+                    luctus est.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
+                    nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
+                    risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
+                    luctus est.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
+                    nibh dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
+                    risus ex ac lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
+                    luctus est.</p>
+            </div>
+        <style>
+        div .container {
+            height:100vh;
+            width:100vw;
+            float:none;
+            margin:0 auto;
+        }
+        .dropdown-item a {
+            text-decoration: none;
+            color: black;
+        }
+        .nav-item a:hover {
+            width: 100%;
+            color: white;
+            background-color: blue;
+        }
+        </style>
 
+            <div class=" d-sm-none d-md-block collapse w-25">
+                <nav id="navbar-example2" class="flex-column navbar navbar-light">
+                    <a class="navbar-brand text-muted" href="#">On this page:</a>
+                    <ul class="nav nav-pills flex-column  ">
+                        <li class="nav-item"><a class="nav-link" href="#scrollspyHeading1">First</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#scrollspyHeading2">Second</a></li>
+                        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#scrollspyHeading3">Third</a></li>
+                                <li><a class="dropdown-item" href="#scrollspyHeading4">Fourth</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="#scrollspyHeading5">Fifth</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
 
-                   <div class="col-sm-3">
-                       <h4>Share on Social Media</h4>
-                       <ul class="nav">
-                           <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="#"><i class="bi bi-linkedin me-2"></i></a></li>
-                           <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="#"><i class="bi bi-twitter me-2"></i></a></li>
-                           <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="#"><i class="bi bi-facebook me-2"></i></a></li>
-                       </ul>
-                   </div>
+        <footer>
+            <div class="row py-5">
+                <div class="col">
+                    <h4>About Us</h4>
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="story.html">Our Story</a></li>
+                            <a aria-current="page" class="nav-link mb-2 p-0 text-muted active" href="privacy.html">Privacy Policy</a>
+                        </li>
+                    </ul>
+                </div>
 
+                <div class="col-sm-3">
+                    <h4>Share on Social Media</h4>
+                    <ul class="nav">
+                        <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="https://www.linkedin.com/in/2dt/"><i class="bi bi-linkedin me-2"></i></a></li>
+                        <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="#"><i class="bi bi-twitter me-2"></i></a></li>
+                        <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="#"><i class="bi bi-facebook me-2"></i></a></li>
+                    </ul>
+                </div>
 
-                   <div class="col-md-5 offset-md-1 mb-3">
-                       <form>
-                           <h4>Subscribe to our newsletter</h4>
-                           <p>Monthly digest of what's new and exciting from us.</p>
-                           <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                               <label class="visually-hidden" for="newsletter1">Email address</label>
-                               <input class="form-control" id="newsletter1" placeholder="Email address" type="text">
-                               <button class="btn btn-primary" type="button">Subscribe</button>
-                           </div>
-                       </form>
-                   </div>
-               </div>
-           </footer>
-</div>
+                <div class="col-md-5 offset-md-1 mb-3">
+                    <form>
+                        <h4>Subscribe to our newsletter</h4>
+                        <p>Monthly digest of what's new and exciting from us.</p>
+                        <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                            <label class="visually-hidden" for="newsletter1">Email address</label>
+                            <input class="form-control" id="newsletter1" placeholder="Email address" type="text">
+                            <button class="btn btn-primary" type="button">Subscribe</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </footer>
+    </div>
 </div>
 </body>
 </html>
