--- a/src/story.html
+++ b/src/story.html
@@ -10,7 +10,7 @@
 
     <!--Basic meta info -->
     <meta content="My Webclass Homepage | Our Story" name="keywords">
-    <meta content="Keith Williams" name="author"/>
+    <meta content="Callie Bryan Truong" name="author"/>
     <meta content="The story and mission of MyWebClass.org" name="description">
 
     <!--OpenGraph meta -->
