included responsive design concerns

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MyWebClass Homepage</title>
+<!-- Bootstrap 5 CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css" integrity="sha512-Dc9q05/3TGpF/brR5G5Pl5O5OoLQfNwybw8SbJ9HyH56jZEBEgZfki4l4h+dHv4lLbgy+6Ll8B3WqJzqZ+CCDg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<!-- Bootstrap 5 JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.min.js" integrity="sha512-cAePHrOjsg1+15pXBu0BPIgV7s2sCFHrqI7FhxFAXc82g7rFJtX9mdVkkZnDUNZ7iHsIw85sxEs1yKPJd+faVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<!-- Bootstrap 5 icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-ePlLtQOyjK5NSzQWbX9vxnKLoEweLLC+K4aWYFX0c4f4jKd+OoAgZIZulSIcOTe8Zprz9JH2l6+DnEGIg8lYwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Basic meta info -->
     <meta name="keywords" content="My Webclass Homepage">
