included SEO features

--- a/src/index.html
+++ b/src/index.html
@@ -13,60 +13,60 @@
 <!-- Bootstrap 5 icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-ePlLtQOyjK5NSzQWbX9vxnKLoEweLLC+K4aWYFX0c4f4jKd+OoAgZIZulSIcOTe8Zprz9JH2l6+DnEGIg8lYwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Basic meta info -->
-    <meta name="keywords" content="My Webclass Homepage">
-    <meta name="author" content="Mithil Patel">
-    <meta name="description" content="A project to help educators integrate new technologies into their teaching">
+<!-- Basic meta info -->
+<meta name="keywords" content="My Webclass Homepage">
+<meta name="author" content="Mithil Patel">
+<meta name="description" content="A project to help educators integrate new technologies into their teaching">
 
-    <!-- OpenGraph meta -->
-    <meta property="og:title" content="">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="assets/images/logo.png">
-    <meta property="og:url" content="">
+<!-- OpenGraph meta -->
+<meta property="og:title" content="MyWebClass Homepage">
+<meta property="og:description" content="A project to help educators integrate new technologies into their teaching">
+<meta property="og:image" content="assets/images/logo.png">
+<meta property="og:url" content="https://www.mywebclass.com/">
 
-    <style>
-        body {
-            background-color: #F8F8F8;
-            font-family: Arial, sans-serif;
-        }
+<style>
+    body {
+        background-color: #F8F8F8;
+        font-family: Arial, sans-serif;
+    }
 
-        .header {
-            background-color: #000000;
-            color: #FFFFFF;
-            display: flex;
-            justify-content: space-between;
-            padding: 20px;
-        }
+    .header {
+        background-color: #000000;
+        color: #FFFFFF;
+        display: flex;
+        justify-content: space-between;
+        padding: 20px;
+    }
 
-        .nav-link {
-            color: #FFFFFF;
-        }
+    .nav-link {
+        color: #FFFFFF;
+    }
 
-        .banner {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 80vh;
-        }
+    .banner {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 80vh;
+    }
 
-        .banner h1 {
-            font-size: 50px;
-            font-weight: bold;
-            text-align: center;
-            margin-bottom: 30px;
-        }
+    .banner h1 {
+        font-size: 50px;
+        font-weight: bold;
+        text-align: center;
+        margin-bottom: 30px;
+    }
 
-        .banner p {
-            font-size: 25px;
-            text-align: center;
-            margin-bottom: 30px;
-        }
+    .banner p {
+        font-size: 25px;
+        text-align: center;
+        margin-bottom: 30px;
+    }
 
-        .btn-start {
-            background-color: #53B8BB;
-            color: #FFFFFF;
-            font-weight: bold;
+    .btn-start {
+        background-color: #53B8BB;
+        color: #FFFFFF;
+        font-weight: bold;
             border-radius: 20px;
             padding: 10px 20px;
         }
