feature-added-author-names

--- a/src/content.html
+++ b/src/content.html
@@ -310,13 +310,13 @@
   </a>
 </li>
 <li class="nav-item mb-2">
-  <a aria-label="Share on Twitter" class="nav-link p-0 text-muted" href="#">
+  <a aria-label="Share on Twitter" class="nav-link p-0 text-muted" href="http://twitter.com">
     <i class="bi bi-twitter me-2"></i>
     Twitter Page
   </a>
 </li>
 <li class="nav-item mb-2">
-  <a aria-label="Share on Facebook" class="nav-link p-0 text-muted" href="#">
+  <a aria-label="Share on Facebook" class="nav-link p-0 text-muted" href="http://facebook.com">
     <i class="bi bi-facebook me-2"></i>
     Facebook Page
   </a>
