--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
                         learning journey.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                         <a href="get_started.html">
-                        <button type="button" class="btn btn-success btn-lg px-4 me-md-2 fw-bold">Start
+                        <button type="button" class="btn btn-success btn-lg px-4 me-md-2 fw-bold" id="start-here">Start
                             Here
                         </button>
                         </a>
