--- a/src/story.html
+++ b/src/story.html
@@ -48,7 +48,7 @@
                 <div class="row align-items-center">
                     <div class="col-auto text-start">
                         <ol class="breadcrumb my-0">
-                            <li class="breadcrumb-item"><a href="/">Home</a></li>
+                            <li class="breadcrumb-item"><a href="/">mywebclass-simulation</a></li>
                             <li aria-current="page" class="breadcrumb-item active">Content Template</li>
                         </ol>
                     </div>
