add google site verification meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,8 @@
 
     <!-- Add jQuery for language switching -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    
+    <meta name="google-site-verification" content="2S7rzL0tpTtrI7yuYvsWgNYHgIMxXL0VtoVsh08OgN8" />
 </head>
 
 <body class="pt-5">
