Revert "Updating master"

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
 
     <!--Basic meta info -->
     <meta name="keywords" content="My Webclass Homepage">
-    <meta name="author" content="Sarang Patel, Eric Huang, Kapila Mane"/>
-    <meta name="description" content="A project to help educators integrate new technologies, created in IS 218">
+    <meta name="author" content="Keith Williams"/>
+    <meta name="description" content="A project to help educators integrate new technoliges into their teaching">
 
     <!--OpenGraph meta -->
     <meta property="og:title" content=""/>
@@ -24,8 +24,6 @@
 
 <body class="pt-5">
 <div class="container-fluid">
-    <img class="rounded-lg-3 img-fluid" src="assets/images/NJIT_logo.png">
-
     <header role="banner" class="fixed-top">
         <nav role="navigation" aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
