--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,11 @@
 </head>
 
 <body class="pt-5">
+<body style="background-color: lightblue;">
 <div class="container-fluid">
-    <img class="rounded-lg-3 img-fluid" src="assets/images/NJIT_logo.png">
+    <img src="assets/images/NJIT_logo.png" width = "150" height = "100">
+    <h4>Originated from NJIT - IS 218</h4>
+    <h6>Contributors: Sarang Patel, Eric Huang, Kapila Mane</h6>
 
     <header role="banner" class="fixed-top">
         <nav role="navigation" aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -47,7 +50,11 @@
         </nav>
     </header>
     <main>
-        <div class="container my-5">
+        <br>
+        <br>
+        <h1><center>Welcome to MyWebClass.org!</center></h1>
+
+      <!--  <div class="container my-5">
             <div class="row p-4 pb-0 pe-lg-0 pt-lg-0 align-items-center rounded-3 border shadow-lg ">
                 <div class="col-lg-7 p-3 p-lg-3 pt-lg-1">
                     <h1 class="display-6 fw-bold lh-1">Revolutionize your teaching</h1>
@@ -65,7 +72,7 @@
                          alt="a teacher with students" width="720">
                 </div>
             </div>
-        </div>
+        </div> -->
     </main>
     <footer class="py-5 container">
         <div class="row">
