Added alt text to NJIT_logo.png image
Incorporating alt text within HTML makes it easier for those who are visually impaired to use the website

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 <body class="pt-5">
 <body style="background-color: lightblue;">
 <div class="container-fluid">
-    <img src="assets/images/NJIT_logo.png" width = "150" height = "100">
+    <img src="assets/images/NJIT_logo.png" alt = "Logo of NJIT College" width = "150" height = "100">
     <h4>Originated from NJIT - IS 218</h4>
     <h6>Contributors: Sarang Patel, Eric Huang, Kapila Mane</h6>
 
