Added Google tags after <head>

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -2,6 +2,15 @@
 <html lang="EN">
 
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0FZME7JR97%22%3E</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0FZME7JR97');
+</script>
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
 
     <title>MyWebClass.org | Our Story</title>
@@ -11,7 +20,7 @@
 
     <!--Basic meta info -->
     <meta content="My Webclass Homepage | Our Story" name="keywords">
-    <meta content="Keith Williams" name="author"/>
+    <meta content="Sarang Patel" name="author"/>
     <meta content="The story and mission of MyWebClass.org" name="description">
 
     <!--OpenGraph meta -->
