ADDED: GDPR guidelines

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -122,6 +122,13 @@
                         it was collected, unless a longer retention period is required by law. We take reasonable
                         measures to protect the information we collect from loss, theft, misuse, and unauthorized
                         access, disclosure, alteration, and destruction.</p>
+                    <h2>GDPR guidelines</h2>
+                    <p> Our website follows the GDPR guidelines as we have obtained explicit and informed consent from users, provided a privacy policy, 
+                        allowed users to access and delete their data, taken appropriate measures to secure personal data, 
+                        appointed a DPO (if necessary), notified users of data breaches, and used GDPR-compliant third-party services. 
+                        Regularly reviewing your website's practices and policies will ensure that you remain GDPR-compliant and protect 
+                        the personal data of your users.</p>
+                     
                     <h2>Data retention and security</h2>
                     <p>We retain the information we collect for as long as necessary to fulfill the purposes for which
                         it was collected, unless a longer retention period is required by law. We take reasonable
