--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="content.html">Content Template</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Forum</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Resources</a>
+                        </li>
                     </ul>
                 </div>
             </div>
