--- a/src/story.html
+++ b/src/story.html
@@ -95,7 +95,7 @@
                                 <li><strong>Learning.</strong> We believe that learning is a lifelong process and that
                                     everyone has something to teach and something to learn. We are committed to
                                     providing opportunities that help developers gain experience
-                                    with new skills and job opportunities.
+                                    with new skills, connections, and job opportunities.
                                 </li>
                                 <li><strong>Efficiency.</strong> We recognize that time is a valuable resource, and we
                                     strive to make the most of it. We aim to provide a practical, hands-on learning
