--- a/src/content.html
+++ b/src/content.html
@@ -41,6 +41,18 @@
                         <li class="nav-item">
                             <a class="nav-link" href="content.html">Content Template</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Resources</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Forum</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Courses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Career</a>
+                        </li>
                     </ul>
                 </div>
             </div>
