--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Forum</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Courses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Career</a>
+                        </li>
                     </ul>
                 </div>
             </div>
