--- a/src/privacy.html
+++ b/src/privacy.html
@@ -126,8 +126,8 @@
                     <p> Our website follows the GDPR guidelines as we have obtained explicit and informed consent from users, provided a privacy policy, 
                         allowed users to access and delete their data, taken appropriate measures to secure personal data, 
                         appointed a DPO (if necessary), notified users of data breaches, and used GDPR-compliant third-party services. 
-                        Regularly reviewing your website's practices and policies will ensure that you remain GDPR-compliant and protect 
-                        the personal data of your users.</p>
+                        We regularly review our website's practices and policies ensure that we remain GDPR-compliant and protect 
+                        the personal data of our users.</p>
                      
                     <h2>Data retention and security</h2>
                     <p>We retain the information we collect for as long as necessary to fulfill the purposes for which
